# easyEngin

./: .gitignore  CMakeLists.txt  README.md  main2d.cpp  snake.cpp  test.cpp
assets/shaders/: sprite2d.frag  sprite2d.vert
engin/: Application.cpp  Application.hpp
engin/2d/: Camera2d.cpp  Camera2d.hpp  Rect.hpp  Renderer2d.cpp  Renderer2d.hpp  Sprite.cpp  Sprite.hpp  Texture2d.cpp  Texture2d.hpp  Vector2.hpp
engin/3d/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  main.cpp
examples/: minesweeper.cpp  snake.cpp
libs/: freeglut.lib  freeglutd.lib
